--- a/esphome/esphome.yaml
+++ b/esphome/esphome.yaml
@@ -37,34 +37,68 @@ esphome:
   # Sensor setup
   sensors:
     - sensor:
-        sensor_name:    'cs24_ct11_w'
-        display_name:   'phase 1'
-        unit:           'W'
-    - sensor:
-        sensor_name:    'cs24_ct12_w'
-        display_name:   'phase 2'
-        unit:           'W'
-    - sensor:
-        sensor_name:    'cs24_ct23_w'
-        display_name:   'Hot water'
-        unit:           'W'
-    - sensor:
-        sensor_name:    'cs24_ct24_w'
-        display_name:   'JuiceBox'
-        unit:           'W'
+        sensor_name:    'cs24_volts'
+        display_name:   'Line Voltage'
+        measurement:    'voltage'
+        tag:            'line'
+        field:          'line'
     - sensor:
         sensor_name:    'cs24_volts_ph1'
-        display_name:   'Phase 1 voltage'
-        unit:           'V'
+        display_name:   'Phase 1 Voltage'
+        measurement:    'voltage'
+        tag:            'line'
+        field:          'line_1'
     - sensor:
         sensor_name:    'cs24_volts_ph2'
-        display_name:   'Phase 2 voltage'
-        unit:           'V'
+        display_name:   'Phase 2 Voltage'
+        measurement:    'voltage'
+        tag:            'line'
+        field:          'line_2'
+    - sensor:
+        sensor_name:    'cs24_frequency'
+        display_name:   'Line Frequency'
+        measurement:    'frequency'
+        tag:            'line'
+        field:          'frequency'
+    - sensor:
+        sensor_name:    'cs24_pf1'
+        display_name:   'Power Factor'
+        measurement:    'power_factor'
+        tag:            'line'
+        field:          'power_factor'
     - sensor:
         sensor_name:    'cs24_w'
         display_name:   'Total demand'
-        unit:           'W'
+        measurement:    'power'
+        tag:            'site'
+        field:          'total_w'
     - sensor:
         sensor_name:    'cs24_kw'
         display_name:   'Total demand'
-        unit:           'kW'
+        measurement:    'power'
+        tag:            'site'
+        field:          'total_kw'
+    - sensor:
+        sensor_name:    'cs24_ct11_w'
+        display_name:   'Phase 1 Power'
+        measurement:    'power'
+        tag:            'line'
+        field:          'line_1'
+    - sensor:
+        sensor_name:    'cs24_ct12_w'
+        display_name:   'Phase 2 Power'
+        measurement:    'power'
+        tag:            'line'
+        field:          'line_2'
+    - sensor:
+        sensor_name:    'cs24_ct23_w'
+        display_name:   'Hot water'
+        measurement:    'power'
+        tag:            'system'
+        field:          'hot_water'
+    - sensor:
+        sensor_name:    'cs24_ct24_w'
+        display_name:   'JuiceBox'
+        measurement:    'power'
+        tag:            'transportation'
+        field:          'juicebox'
