--- a/example.secrets.yaml
+++ b/example.secrets.yaml
@@ -1,5 +1,12 @@
-# InfluxDB credentials
-influxdb2_bucket: 'cs24'
-influxdb2_token: 'my-token'
-influxdb2_org: 'my-org'
-influxdb2_url: 'http://10.0.0.1:8086'
+# CircuitSetup ESPHome secrets
+
+# InfluxDB2 credentials
+esphome_influxdb2_org: 'your-org'
+esphome_influxdb2_bucket: 'cs24'
+esphome_influxdb2_url: '192.168.0.32:8086'
+esphome_influxdb2_token: 'your-token'
+
+# ESPHome API credentials
+esphome_url:        '192.168.0.30'
+esphome_port:       6053
+esphome_password:   ''
