--- a/esphome/esphome.yaml
+++ b/esphome/esphome.yaml
@@ -7,6 +7,12 @@ esphome:
     format: '[%(asctime)s] [%(module)s] [%(levelname)s] %(message)s'
     level: 'INFO'
 
+
+  # debug fields
+  debug:
+    create_bucket:  True
+    delete_bucket:  True
+
   # ESPHome API fields
   # These options are used to login into the ESPHome API to collect the sensor data.
   #   circuitsetup.url        set to the ESPHome API url ('str')
@@ -25,13 +31,11 @@ esphome:
   #   influxdb2.url           set to the InfluxDB server URL and port ('str')
   #   influxdb2.org           set to the v2 organization ('str')
   #   influxdb2.token         set to a valid v2 token ('str')
-  ###new_bucket
   influxdb2:
     org:    !secret esphome_influxdb2_org
     url:    !secret esphome_influxdb2_url
     bucket: !secret esphome_influxdb2_bucket
     token:  !secret esphome_influxdb2_token
-    new_bucket:    True
 
   # esphome settings
   # Allows some settings to be modified without editing the code
