--- a/esphome/esphome.yaml
+++ b/esphome/esphome.yaml
@@ -9,9 +9,11 @@ esphome:
 
 
   # debug fields
+  #  debug.create_bucket    creates the InfluxDB2 bucket if it does not exist
+  #  debug.delete_bucket    deletes the bucket if it exists
   debug:
     create_bucket:  True
-    delete_bucket:  True
+    delete_bucket:  False
 
   # ESPHome API fields
   # These options are used to login into the ESPHome API to collect the sensor data.
